--- a/Blog/css/card.css
+++ b/Blog/css/card.css
@@ -19,7 +19,7 @@
     width: 100%;
     height: 150px;
     object-fit: cover;
-    display: block;
+    display: grid;
     border-top: 2px solid #333333;
     border-right: 2px solid #333333;
     border-left: 2px solid #333333;
